--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@ Jessica Kincaid
 January 12, 2019
 LC101 JavaScript -->
 
+<!-- My API key from GIPHY is 
+
+6WqJOT4ORaSbgX4NQX7k7VwwmT0ub3LL -->
+
+
 <!DOCTYPE html>
 <html>
 
