--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ LC101 JavaScript -->
 
     <img id="gif" src="" hidden="true" />
     <p id="feedback" hidden="true`"></p>
-    <p id="loading" hidden="true"></p>
+    <p id="response" hidden="true"></p>
 </body>
 
 </html>
