--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@ LC101 JavaScript -->
     <input name="tag" type="text" />
     <input type="submit" value="Get my Gif!" />
     </form>
-
-    <img id="gif" src="" hidden="true" />
-    <p id="feedback" hidden="true`"></p>
-    <p id="response" hidden="true"></p>
+    <hr />
+    <section id="load_gif">
+        <img id="gif" src="" hidden="true" />
+        <p id="feedback" hidden="true`"></p>
+        <p id="response" hidden="true"></p>
+    </section>
 </body>
 
 </html>
