--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@ LC101 JavaScript -->
     <label>What kind of Jackson 5 related gif do you want?</label>
     <input name="tag" type="text" />
     <input type="submit" value="Get my Gif!" />
+
+    <img id="gif" src="" hidden="true" />
+    <p id="feedback" hidden="true`"></p>
+    <p id="response" hidden="true"></p>
+
+    <label>Prove you are not a robot by answering this riddle:</label>
+    <input type="number" quantity="1" min="5" max="5" />
+    <p>Jacksons are better than 1.</p>
     </form>
-    <hr />
-    <section id="load_gif">
-        <img id="gif" src="" hidden="true" />
-        <p id="feedback" hidden="true`"></p>
-        <p id="response" hidden="true"></p>
-    </section>
 </body>
 
 </html>
