--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@ LC101 JavaScript -->
     <form id="form-gif-request" />
     <label>What kind of Jackson 5 related gif do you want?</label>
     <input name="tag" type="text" />
+    <br />
+    <label>Prove you are not a robot by answering this riddle:</label>
+    <br />
+    <p><input type="number" quantity="1" min="1" max="100" /> Jacksons are better than 1.</p>
     <input type="submit" value="Get my Gif!" />
+    </form>
 
     <img id="gif" src="" hidden="true" />
     <p id="feedback" hidden="true`"></p>
     <p id="response" hidden="true"></p>
 
-    <label>Prove you are not a robot by answering this riddle:</label>
-    <input type="number" quantity="1" min="5" max="5" />
-    <p>Jacksons are better than 1.</p>
-    </form>
 </body>
 
 </html>
