set up validation field

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ LC101 JavaScript -->
     <br />
     <label>Prove you are not a robot by answering this riddle:</label>
     <br />
-    <p><input type="number" quantity="1" min="1" max="100" /> Jacksons are better than 1.</p>
+    <p><input data-validation="number" id="form-validate" quantity="1" min="1" max="100" /> Jacksons are better than 1.</p>
     <input type="submit" value="Get my Gif!" />
     </form>
 
