--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ LC101 JavaScript -->
 <html>
 
 <head>
-    <title>The AJAXson 5</title>
+    <title>AJAXson 5</title>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src="request-gif.js"></script>
 </head>
 
 <body>
-    <h1>The AJAXson 5</h1>
+    <h1>AJAXson 5</h1>
 
     <form id="form-gif-request" />
     <label>What kind of Jackson 5 related gif do you want?</label>
@@ -22,7 +22,7 @@ LC101 JavaScript -->
     <br />
     <label>Prove you are not a robot by answering this riddle:</label>
     <br />
-    <p><input data-validation="number" id="form-validate" quantity="1" min="1" max="100" /> Jacksons are better than 1.</p>
+    <p style="font-weight:bold;"><input id="form-validate" type="number" /> Jacksons are better than 1.</p>
     <input type="submit" value="Get my Gif!" />
     </form>
 
