testing lots of functions to display No GIFs for you

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ LC101 JavaScript -->
     <br />
     <label>Prove you are not a robot by answering this riddle:</label>
     <br />
-    <p style="font-weight:bold;"><input id="form-validate" type="number" /> Jacksons are better than 1.</p>
-    <input type="submit" value="Get my Gif!" />
+    <p style="font-weight:bold;"><input type="text" id="numData" /> Jacksons are better than 1.</p>
+    <input type="submit" id="numButton" value="Get my Gif!" />
     </form>
 
     <img id="gif" src="" hidden="true" />
