--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@ LC101 JavaScript -->
     <label>What kind of Jackson 5 related gif do you want?</label>
     <input name="tag" type="text" />
     <br />
-    <label>Prove you are not a robot by answering this riddle:</label>
+    <label for="numData">Prove you are not a robot by answering this riddle:</label>
     <br />
-    <p style="font-weight:bold;"><input type="text" id="numData" /> Jacksons are better than 1.</p>
+    <p style="font-weight:bold;"><input type="text" id="numCheck" /> Jacksons are better than 1.</p>
     <input type="submit" id="numButton" value="Get my Gif!" />
     </form>
 
