--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@ LC101 JavaScript -->
 
     <form id="form-gif-request" />
     <label>What kind of Jackson 5 related gif do you want?</label>
-    <input name="tag" type="text" />
+    <input name="tag" type="text" id="query" />
     <br />
     <label for="numData">Prove you are not a robot by answering this riddle:</label>
     <br />
+
+    <p id="feedback" hidden="true`"></p>
+
     <p style="font-weight:bold;"><input type="text" id="numCheck" /> Jacksons are better than 1.</p>
     <input type="submit" id="numButton" value="Get my Gif!" />
     </form>
 
     <img id="gif" src="" hidden="true" />
-    <p id="feedback" hidden="true`"></p>
     <p id="response" hidden="true"></p>
 
 </body>
