--- a/index.html
+++ b/index.html
@@ -18,18 +18,23 @@ LC101 JavaScript -->
 
     <form id="form-gif-request" />
     <div>
-        <label>What kind of Jackson 5 related gif do you want?</label>
-
+        <label for="tag">What kind of Jackson 5 related gif do you want?</label>
+        <input name="tag" type="text" id="query" />
         <p id="feedback" hidden="true"></p>
+
     </div>
-    <input name="tag" type="text" id="query" />
+    <!-- DONE -->
+
     <br />
-    <label for="numTest">Prove you are not a robot by answering this riddle:</label>
+    <p>Prove you are not a robot by answering this riddle:</p>
+    <input name="tag" type="text" id="numTest" />
+
+    <label for="numTest" style="font-weight:bold;">Jacksons are better than 1.</label>
+    <p id="numError"></p>
+
     <br />
 
-    <!-- <p id="feedback" hidden="true`"></p> -->
 
-    <p style="font-weight:bold;"><input type="text" id="numCheck" /> Jacksons are better than 1.</p>
     <input type="submit" id="numButton" value="Get my Gif!" />
     </form>
 
