switch number input to reference numCheck

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ LC101 JavaScript -->
 
     <br />
     <p>Prove you are not a robot by answering this riddle:</p>
-    <input name="tag" type="text" id="numTest" />
+    <input name="numTest" type="number" id="numTest" />
 
     <label for="numTest" style="font-weight:bold;">Jacksons are better than 1.</label>
     <p id="numError"></p>
