gif.hide() in numberCheck

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@ LC101 JavaScript -->
     <br />
 
 
-    <input type="submit" id="numButton" value="Get my Gif!" />
+    <input type="submit" value="Get my Gif!" />
     </form>
 
     <img id="gif" src="" hidden="true" />
-    <p id="response" hidden="true"></p>
+    <!-- <p id="response" hidden="true"></p> -->
 
 </body>
 
