--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@ LC101 JavaScript -->
     </form>
 
     <img id="gif" src="" hidden="true" />
-    <!-- <p id="response" hidden="true"></p> -->
+    <p id="response" hidden="true"></p>
+    <p id="feedback" hidden="true"></p>
 
 </body>
 
