--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@ LC101 JavaScript -->
                         <input type="submit" class="btn btn-primary btn-lg" value="Get my Gif!" />
                         </form>
                     </div>
-                    <img id="gif" src="" hidden="true" />
-                    <p id="response" hidden="true"></p>
-                    <p id="feedback" hidden="true"></p>
-
+                    <br/>
+                    <div class="container-fluid">
+                        <img id="gif" src="" hidden="true" />
+                        <p id="response" hidden="true"></p>
+                        <p id="feedback" hidden="true"></p>
+                    </div>
                 </div>
             </div>
 </body>
